[project]
name = "the-rag-api"
version = "0.1.0"
description = "FastAPI ingestion service for Retrieval-Augmented Generation (RAG) that converts, chunks, deduplicates, and embeds documents into Qdrant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "any-to-markdown[all]>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.18.0",
]


